--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="D:\23g034\rakesh image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="\rakesh image.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Rakesh karan J</h1>
             <p> computure science </p>
         </div>
@@ -166,7 +166,7 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="D:\23g034\rakesh pdf.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="rakesh pdf.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
