--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="\rakesh image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="rakesh image.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Rakesh karan J</h1>
             <p> computure science </p>
         </div>
